Bug 30437 - [llvmpipe] glean glsl1 2D Texture lookup with explicit lod (Vertex shader) regression
Summary: [llvmpipe] glean glsl1 2D Texture lookup with explicit lod (Vertex shader) re...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-28 13:32 UTC by Vinson Lee
Modified: 2010-10-01 07:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-09-28 13:32:07 UTC
mesa: 35f94b1942d9b99463ef9e179ebf70809e3bea69 (master)

GLSL_TEST='2D Texture lookup with explicit lod (Vertex shader)'  glean -r results -t glsl1

glsl1: Running single test: 2D Texture lookup with explicit lod (Vertex shader)
FAILURE:
  Shader test: 2D Texture lookup with explicit lod (Vertex shader)
  Expected color: 0.25, 0, 0, 0.25
  Observed color: 1, 0, 0, 1
glsl1:  FAIL rgba8, db, z24, s8, accrgba16, win+pmap, id 33
	0 tests passed, 1 tests failed.
Comment 1 Vinson Lee 2010-09-28 13:40:17 UTC
61b7da074e2faebf03d3dfc30e910ee1367bcd5a is the first bad commit
commit 61b7da074e2faebf03d3dfc30e910ee1367bcd5a
Author: Brian Paul <brianp@vmware.com>
Date:   Thu Sep 23 18:18:40 2010 -0600

    llvmpipe: make min/max lod and lod bias dynamic state
    
    Before, changing any of these sampler values triggered generation
    of new JIT code.  Added a new flag for the special case of
    min_lod == max_lod which is hit during auto mipmap generation.

:040000 040000 c929eaf850d537e72057f13aee2ad02059e442fc f758e982ceca8e29ebc3ba815a854120300af565 M	src
bisect run success
Comment 2 Brian Paul 2010-09-29 09:38:42 UTC
Fixed with mesa commit 0cb545a7f2e823c85309013c4c41e9461f297d06
Comment 3 Vinson Lee 2010-10-01 07:53:39 UTC
mesa: 40ccb235d693ea6184ab61529f2910086e68edda (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.